# cherry_blazer

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  README.md  REFERENCE.md  TODO.md  iwyu.imp  main.cc  point.hh  point_test.cc  tuple.cc  tuple.hh  tuple_test.cc  user_presets.todo  util.hh  vector.hh  vector_test.cc
.github/workflows/: ci.yml
cmake/: cherry_blazer_util.cmake  get_boost.cmake  get_boost_pfr.cmake  get_fmt.cmake  get_googletest.cmake  get_markable.cmake
src/: CMakeLists.txt  axis.hh  canvas.cc  canvas.hh  cherry_blazer_config.hh.in  clock_main.cc  color.cc  color.hh  config.hh.in  main.cc  matrix.hh  matrix_detail.hh  matrix_operations.hh  point.cc  point.hh  point2d.hh  point3d.hh  point_operations.hh  point_properties.hh  ppm.cc  ppm.hh  ppm_main.cc  projectile.cc  projectile.hh  projectile_main.cc  safe_numerics_typedefs.hh  shearing.hh  tuple.cc  tuple.hh  types.hh  util.hh  vector.cc  vector.hh  vector2d.hh  vector3d.hh  vector4d.hh  vector_operations.hh  vector_properties.hh
src/cherry_blazer/: CMakeLists.txt  axis.hh  canvas.cc  canvas.hh  color.cc  color.hh  coord.hh  intersection.cc  intersection.hh  lighting.cc  lighting.hh  mat4d.cc  mat4f.cc  mat4x1d.cc  mat4x4d.cc  material.cc  material.hh  matrix.cc  matrix.hh  matrix_operations.hh  matrix_properties.hh  matrix_transformations.hh  normal.hh  optional_double.hh  point.hh  point3d.cc  point3f.cc  point_light.hh  point_operations.hh  point_properties.hh  ppm.cc  ppm.hh  ray.cc  ray.hh  reflect.hh  shearing.hh  sphere.cc  sphere.hh  square_matrix.hh  transformation.cc  (+9 more)
src/cherry_blazer/detail/: detail.hh  matrix_base.hh  matrix_impl.hh  types.hh  util.hh
src/clock/: CMakeLists.txt  generate.cc  main.cc
src/figure/: CMakeLists.txt  main.cc
src/projectile/: CMakeLists.txt  main.cc  projectile.cc  projectile.hh
src/silhouette/: CMakeLists.txt  main.cc
test/: CMakeLists.txt  canvas_test.cc  color_test.cc  intersection_test.cc  light_test.cc  lighting_test.cc  material_test.cc  matrix_test.cc  matrix_transformations_test.cc  normal_test.cc  point3d_test.cc  point_test.cc  ray_test.cc  reflect_test.cc  sphere_test.cc  translation_matrix_test.cc  tuple_test.cc  vector3d_test.cc  vector_test.cc
test/compilation/: canvas_test.cmake  color_test.cmake  point_test.cmake  tuple_test.cmake  vector_test.cmake
thirdparty-patches/: boost.patch  googletest.patch
